--- a/biologia.html
+++ b/biologia.html
@@ -10,7 +10,7 @@
 <body>
     <div class="contenedor">
 <div class="encabezado">
-    Asignatura de Tecnologia
+    Asignatura de Biologia
 </div>
 <div class="menu">
     <div class="Tecnologia">
