--- a/biologia.html
+++ b/biologia.html
@@ -28,10 +28,7 @@
 </div>
 <div class="contenedor2">
     <div class="izquierda">
-        ana sofia alvarez parra, 
-        yeseleyn gutierres,
-        juam jose corrales,
-        juan andres rondal .
+        Yeseleyn gutierrez garcia, Ana sofia alvarez parra.
     </div>
 <div class="centro"></div>
 <div class="derecha"></div>
